--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -452,11 +452,11 @@
                   <form class="vpn-incompatible">
                     <fieldset>
                       <p data-i18n="settings#disable-timeouts#help-text">
-                        If enabled, requests made via Psiphon will never timeout
+                        If enabled, communication with the Psiphon server will not time out
                       </p>
                       <p data-i18n="settings#disable-timeouts#reason">
-                        This means that over very slow network connections, you are
-                        more likely to have your request succeed.
+                        When enabling this over a very slow network connection, you are
+                        less likely to experience unexpected disconnections.
                       </p>
                       <div class="checkbox-container">
                         <div class="controls checkbox">
@@ -478,7 +478,7 @@
                 </div>
               </div>
             </div>
-            
+
             <div class="accordion-group">
               <div class="accordion-heading">
                 <a class="accordion-toggle" href="#settings-accordion-egress-region"
