--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -707,26 +707,6 @@
                         Only HTTP proxies that support HTTPS are allowed.
                       </p>
                       <div class="control-group skip-upstream-proxy-incompatible vpn-incompatible">
-                        <label for="UpstreamProxyUsername" class="control-label vpn-incompatible-label"
-                                data-i18n="settings#upstream-proxy#username-label">
-                          Username
-                        </label>
-                        <div class="controls">
-                          <input type="text" id="UpstreamProxyUsername"
-                                 autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-                        </div>
-                      </div>
-                      <div class="control-group skip-upstream-proxy-incompatible vpn-incompatible">
-                        <label for="UpstreamProxyPassword" class="control-label vpn-incompatible-label"
-                                data-i18n="settings#upstream-proxy#password-label">
-                          Password
-                        </label>
-                        <div class="controls">
-                          <input type="text" id="UpstreamProxyPassword"
-                                 autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-                        </div>
-                      </div>
-                      <div class="control-group skip-upstream-proxy-incompatible vpn-incompatible">
                         <label for="UpstreamProxyHostname" class="control-label vpn-incompatible-label"
                                 data-i18n="settings#upstream-proxy#hostname-label">
                           Hostname
@@ -749,6 +729,36 @@
                           </span>
                         </div>
                       </div>
+                      <div class="control-group skip-upstream-proxy-incompatible vpn-incompatible">
+                        <label for="UpstreamProxyUsername" class="control-label vpn-incompatible-label"
+                                data-i18n="settings#upstream-proxy#username-label">
+                          Username
+                        </label>
+                        <div class="controls">
+                          <input type="text" id="UpstreamProxyUsername"
+                                 autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+                        </div>
+                      </div>
+                      <div class="control-group skip-upstream-proxy-incompatible vpn-incompatible">
+                        <label for="UpstreamProxyPassword" class="control-label vpn-incompatible-label"
+                                data-i18n="settings#upstream-proxy#password-label">
+                          Password
+                        </label>
+                        <div class="controls">
+                          <input type="text" id="UpstreamProxyPassword"
+                                 autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+                        </div>
+                      </div>
+                      <div class="control-group skip-upstream-proxy-incompatible vpn-incompatible">
+                        <label for="UpstreamProxyDomain" class="control-label vpn-incompatible-label"
+                                data-i18n="settings#upstream-proxy#domain-label">
+                          Domain
+                        </label>
+                        <div class="controls">
+                          <input type="text" id="UpstreamProxyDomain"
+                                 autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+                        </div>
+                      </div>
                       <div class="control-group vpn-incompatible">
                         <div class="controls">
                           <div class="checkbox-container">
@@ -764,13 +774,23 @@
                         </div>
                       </div>
                       <span class="help-block upstream-proxy-hostname-port-match">
-                        <span data-i18n="settings#upstream-proxy#set-both-hostname-port-error-msg">
+                        <span data-i18n="settings#upstream-proxy#set-hostname-port-error-msg">
                           You must set both Hostname and Port, or leave both blank for automatic selection.
                         </span>
                       </span>
                       <span class="help-block upstream-proxy-username-password-match">
-                        <span data-i18n="settings#upstream-proxy#set-both-username-password-error-msg">
-                          You must set both a Username and Password, or leave both blank.
+                        <span data-i18n="settings#upstream-proxy#set-username-password-error-msg">
+                          You must set both a Username and Password, or leave both blank for no authentication.
+                        </span>
+                      </span>
+                      <span class="help-block upstream-proxy-domain-requires-authentication">
+                        <span data-i18n="settings#upstream-proxy#set-domain-without-authentication-error-msg">
+                          Setting a Domain requires setting a Username and Password.
+                        </span>
+                      </span>
+                      <span class="help-block upstream-proxy-authentication-requires-hostname-and-port">
+                        <span data-i18n="settings#upstream-proxy#set-hostname-port-without-authentication-error-msg">
+                          Setting a Username and Password requires setting a Hostname and Port.
                         </span>
                       </span>
                       <span class="help-block">
