more validation fixes

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -15850,7 +15850,7 @@ function upstreamProxyValid(finalCheck) {
   if (!$('#SkipUpstreamProxy').prop('checked')) {
     // username and password are both set
     if (Boolean($('#UpstreamProxyUsername').val()) === true && Boolean($('#UpstreamProxyPassword').val()) === true) {
-      //hostname and port are not set
+      // hostname and port are not set
       if (!(Boolean($('#UpstreamProxyHostname').val()) === true && Boolean($('#UpstreamProxyPort').val()) === true)) {
         authenticationRequiresHostnameAndPort = false;
       }
@@ -15874,6 +15874,12 @@ function upstreamProxyValid(finalCheck) {
     $('.upstream-proxy-hostname-port-match').addClass('hidden');
     // And remove error state from hostname (but not from the port value... yet)
     $('#UpstreamProxyHostname')
+
+    if (portOK) {
+      // Remove the error state from the port value
+      $('#UpstreamProxyPort')
+        .parents('.control-group').removeClass('error');
+    }
       .parents('.control-group').removeClass('error');
   }
 
@@ -15892,6 +15898,8 @@ function upstreamProxyValid(finalCheck) {
 
   if (domainRequiresAuthentication) {
     // Hide the domain requires username and passowrd message
+    $('#UpstreamProxyDomain')
+      .parents('.control-group').removeClass('error');
     $('.upstream-proxy-domain-requires-authentication').addClass('hidden')
     // And remove error state from domain field
     $('#UpstreamProxyDomain')
