New notification balloon message.

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -12370,6 +12370,8 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "appbackend#minimized-to-systray-body": "[Ƈŀīīƈķ ŧħḗḗ īīƈǿǿƞ ŧǿǿ řḗḗşŧǿǿřḗḗ ŧħḗḗ ȧȧƥƥŀīīƈȧȧŧīīǿǿƞ]",
       "appbackend#minimized-to-systray-title": "[Ƥşīīƥħǿǿƞ ħȧȧş ƀḗḗḗḗƞ ḿīīƞīīḿīīẑḗḗḓ ŧǿǿ ŧħḗḗ ƞǿǿŧīīƒīīƈȧȧŧīīǿǿƞ ȧȧřḗḗȧȧ]",
       "appbackend#state-connected-body": "[Ḗḗẋƥŀǿǿřḗḗ ƀḗḗẏǿǿƞḓ ẏǿǿŭŭř ƀǿǿřḓḗḗřş!]",
+      "appbackend#state-connected-reminder-body": "[Ƈŀīīƈķ ŧǿǿ şḗḗḗḗ ƒřḗḗşħ ƞḗḗẇ ƈǿǿƞŧḗḗƞŧ ƒřǿǿḿ Ƥşīīƥħǿǿƞ!]",
+      "appbackend#state-connected-reminder-title": "[Ƥşīīƥħǿǿƞ īīş ķḗḗḗḗƥīīƞɠ ẏǿǿŭŭ ƈǿǿƞƞḗḗƈŧḗḗḓ]",
       "appbackend#state-connected-title": "[Ƥşīīƥħǿǿƞ īīş ƈǿǿƞƞḗḗƈŧḗḗḓ]",
       "appbackend#state-starting-body": "[Ƥŀḗḗȧȧşḗḗ ẇȧȧīīŧ…]",
       "appbackend#state-starting-title": "[Ƥşīīƥħǿǿƞ īīş ƈǿǿƞƞḗḗƈŧīīƞɠ]",
@@ -12498,6 +12500,8 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "appbackend#minimized-to-systray-body": "‮Ↄʅıɔʞ‬ ‮ʇɥǝ‬ ‮ıɔou‬ ‮ʇo‬ ‮ɹǝsʇoɹǝ‬ ‮ʇɥǝ‬ ‮ɐddʅıɔɐʇıou‬",
       "appbackend#minimized-to-systray-title": "‮Ԁsıdɥou‬ ‮ɥɐs‬ ‮qǝǝu‬ ‮ɯıuıɯızǝp‬ ‮ʇo‬ ‮ʇɥǝ‬ ‮uoʇıɟıɔɐʇıou‬ ‮ɐɹǝɐ‬",
       "appbackend#state-connected-body": "‮Ǝxdʅoɹǝ‬ ‮qǝʎoup‬ ‮ʎonɹ‬ ‮qoɹpǝɹs‬!",
+      "appbackend#state-connected-reminder-body": "‮Ↄʅıɔʞ‬ ‮ʇo‬ ‮sǝǝ‬ ‮ɟɹǝsɥ‬ ‮uǝʍ‬ ‮ɔouʇǝuʇ‬ ‮ɟɹoɯ‬ ‮Ԁsıdɥou‬!",
+      "appbackend#state-connected-reminder-title": "‮Ԁsıdɥou‬ ‮ıs‬ ‮ʞǝǝdıuƃ‬ ‮ʎon‬ ‮ɔouuǝɔʇǝp‬",
       "appbackend#state-connected-title": "‮Ԁsıdɥou‬ ‮ıs‬ ‮ɔouuǝɔʇǝp‬",
       "appbackend#state-starting-body": "‮Ԁʅǝɐsǝ‬ ‮ʍɐıʇ‬…",
       "appbackend#state-starting-title": "‮Ԁsıdɥou‬ ‮ıs‬ ‮ɔouuǝɔʇıuƃ‬",
@@ -12866,6 +12870,8 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "appbackend#state-starting-body": "Please wait…",
       "appbackend#state-connected-title": "Psiphon is connected",
       "appbackend#state-connected-body": "Explore beyond your borders!",
+      "appbackend#state-connected-reminder-title": "Psiphon is keeping you connected",
+      "appbackend#state-connected-reminder-body": "Click to see fresh new content from Psiphon!",
       "appbackend#minimized-to-systray-title": "Psiphon has been minimized to the notification area",
       "appbackend#minimized-to-systray-body": "Click the icon to restore the application"
     }
