--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -12565,14 +12565,27 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "settings#egress-region#heading": "[Ƥşīīƥħǿǿƞ Şḗḗřṽḗḗř Řḗḗɠīīǿǿƞ]",
       "settings#egress-region#invalid-error-msg": "[Ƈħǿǿǿǿşḗḗ ȧȧ ṽȧȧŀīīḓ Ƥşīīƥħǿǿƞ şḗḗřṽḗḗř řḗḗɠīīǿǿƞ.]",
       "settings#egress-region#label": "[Ƈǿǿƞƞḗḗƈŧ ṽīīȧȧ]",
+      "settings#egress-region#select-at": "[Ȧȧŭŭşŧřīīȧȧ]",
+      "settings#egress-region#select-be": "[Ɓḗḗŀɠīīŭŭḿ]",
       "settings#egress-region#select-best-performance": "[Ƒȧȧşŧḗḗşŧ Ƈǿǿŭŭƞŧřẏ]",
+      "settings#egress-region#select-bg": "[Ɓŭŭŀɠȧȧřīīȧȧ]",
       "settings#egress-region#select-ca": "[Ƈȧȧƞȧȧḓȧȧ]",
+      "settings#egress-region#select-ch": "[Şẇīīŧẑḗḗřŀȧȧƞḓ]",
+      "settings#egress-region#select-cz": "[Ƈẑḗḗƈħ Řḗḗƥŭŭƀŀīīƈ]",
       "settings#egress-region#select-de": "[Ɠḗḗřḿȧȧƞẏ]",
+      "settings#egress-region#select-dk": "[Ḓḗḗƞḿȧȧřķ]",
       "settings#egress-region#select-es": "[Şƥȧȧīīƞ]",
+      "settings#egress-region#select-fr": "[Ƒřȧȧƞƈḗḗ]",
       "settings#egress-region#select-gb": "[Ŭŭƞīīŧḗḗḓ Ķīīƞɠḓǿǿḿ]",
+      "settings#egress-region#select-hk": "[Ħǿǿƞɠ Ķǿǿƞɠ]",
+      "settings#egress-region#select-hu": "[Ħŭŭƞɠȧȧřẏ]",
       "settings#egress-region#select-in": "[Īīƞḓīīȧȧ]",
+      "settings#egress-region#select-it": "[Īīŧȧȧŀẏ]",
       "settings#egress-region#select-jp": "[Ĵȧȧƥȧȧƞ]",
       "settings#egress-region#select-nl": "[Ƞḗḗŧħḗḗřŀȧȧƞḓş]",
+      "settings#egress-region#select-no": "[Ƞǿǿřẇȧȧẏ]",
+      "settings#egress-region#select-ro": "[Řǿǿḿȧȧƞīīȧȧ]",
+      "settings#egress-region#select-se": "[Şẇḗḗḓḗḗƞ]",
       "settings#egress-region#select-sg": "[Şīīƞɠȧȧƥǿǿřḗḗ]",
       "settings#egress-region#select-us": "[Ŭŭƞīīŧḗḗḓ Şŧȧȧŧḗḗş]",
       "settings#error-alert": "[<strong>Ḗḗřřǿǿř!</strong> Ƥŀḗḗȧȧşḗḗ ƒīīẋ īīƞƈǿǿřřḗḗƈŧ ṽȧȧŀŭŭḗḗş ƀḗḗƒǿǿřḗḗ ƥřǿǿƈḗḗḗḗḓīīƞɠ.]",
@@ -12696,14 +12709,27 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "settings#egress-region#heading": "‮Ԁsıdɥou‬ ‮Sǝɹʌǝɹ‬ ‮ᴚǝƃıou‬",
       "settings#egress-region#invalid-error-msg": "‮Ↄɥoosǝ‬ ‮ɐ‬ ‮ʌɐʅıp‬ ‮Ԁsıdɥou‬ ‮sǝɹʌǝɹ‬ ‮ɹǝƃıou‬.",
       "settings#egress-region#label": "‮Ↄouuǝɔʇ‬ ‮ʌıɐ‬",
+      "settings#egress-region#select-at": "‮∀nsʇɹıɐ‬",
+      "settings#egress-region#select-be": "‮Ԑǝʅƃınɯ‬",
       "settings#egress-region#select-best-performance": "‮ɟɐsʇǝsʇ‬ ‮Ↄonuʇɹʎ‬",
+      "settings#egress-region#select-bg": "‮Ԑnʅƃɐɹıɐ‬",
       "settings#egress-region#select-ca": "‮Ↄɐuɐpɐ‬",
+      "settings#egress-region#select-ch": "‮Sʍıʇzǝɹʅɐup‬",
+      "settings#egress-region#select-cz": "‮Ↄzǝɔɥ‬ ‮ᴚǝdnqʅıɔ‬",
       "settings#egress-region#select-de": "‮פǝɹɯɐuʎ‬",
+      "settings#egress-region#select-dk": "‮pǝuɯɐɹʞ‬",
       "settings#egress-region#select-es": "‮Sdɐıu‬",
+      "settings#egress-region#select-fr": "‮ɟɹɐuɔǝ‬",
       "settings#egress-region#select-gb": "‮∩uıʇǝp‬ ‮Ӽıuƃpoɯ‬",
+      "settings#egress-region#select-hk": "‮Houƃ‬ ‮Ӽouƃ‬",
+      "settings#egress-region#select-hu": "‮Hnuƃɐɹʎ‬",
       "settings#egress-region#select-in": "‮Iupıɐ‬",
+      "settings#egress-region#select-it": "‮Iʇɐʅʎ‬",
       "settings#egress-region#select-jp": "‮ſɐdɐu‬",
       "settings#egress-region#select-nl": "‮Nǝʇɥǝɹʅɐups‬",
+      "settings#egress-region#select-no": "‮Noɹʍɐʎ‬",
+      "settings#egress-region#select-ro": "‮ᴚoɯɐuıɐ‬",
+      "settings#egress-region#select-se": "‮Sʍǝpǝu‬",
       "settings#egress-region#select-sg": "‮Sıuƃɐdoɹǝ‬",
       "settings#egress-region#select-us": "‮∩uıʇǝp‬ ‮Sʇɐʇǝs‬",
       "settings#error-alert": "<strong>‮Ǝɹɹoɹ‬!</strong> ‮Ԁʅǝɐsǝ‬ ‮ɟıx‬ ‮ıuɔoɹɹǝɔʇ‬ ‮ʌɐʅnǝs‬ ‮qǝɟoɹǝ‬ ‮dɹoɔǝǝpıuƃ‬.",
@@ -12939,6 +12965,19 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "settings#egress-region#select-de": "Germany",
       "settings#egress-region#select-in": "India",
       "settings#egress-region#select-es": "Spain",
+      "settings#egress-region#select-hk": "Hong Kong",
+      "settings#egress-region#select-at": "Austria",
+      "settings#egress-region#select-be": "Belgium",
+      "settings#egress-region#select-bg": "Bulgaria",
+      "settings#egress-region#select-ch": "Switzerland",
+      "settings#egress-region#select-cz": "Czech Republic",
+      "settings#egress-region#select-dk": "Denmark",
+      "settings#egress-region#select-fr": "France",
+      "settings#egress-region#select-hu": "Hungary",
+      "settings#egress-region#select-it": "Italy",
+      "settings#egress-region#select-no": "Norway",
+      "settings#egress-region#select-ro": "Romania",
+      "settings#egress-region#select-se": "Sweden",
       "settings#egress-region#description": "Psiphon has servers in many different countries. Using a Psiphon server in a country close to your home country will generally provide a better network connection, but you may wish to access websites and services like you are virtually in a specific country.",
       "settings#egress-region#default": "Choosing the default <strong>“Fastest Country”</strong> option allows Psiphon to automatically choose a server, which will generally result in the best network connection.",
       "settings#egress-region#invalid-error-msg": "Choose a valid Psiphon server region.",
@@ -18269,10 +18308,40 @@ window.HtmlCtrlInterface_UpdateDpiScaling = HtmlCtrlInterface_UpdateDpiScaling;
                                   </strong>
                                 </a>
                             </li>
+                            <li data-region="AT">
+                              <a href="#" tabindex="-1" class="flag at"
+                                 data-i18n="settings#egress-region#select-at">
+                                Austria
+                              </a>
+                            </li>
+                            <li data-region="BE">
+                              <a href="#" tabindex="-1" class="flag be"
+                                 data-i18n="settings#egress-region#select-be">
+                                Belgium
+                              </a>
+                            </li>
+                            <li data-region="BG">
+                              <a href="#" tabindex="-1" class="flag bg"
+                                 data-i18n="settings#egress-region#select-bg">
+                                Bulgaria
+                              </a>
+                            </li>
                             <li data-region="CA">
                               <a href="#" tabindex="-1" class="flag ca"
                                  data-i18n="settings#egress-region#select-ca">
                                 Canada
+                              </a>
+                            </li>
+                            <li data-region="CH">
+                              <a href="#" tabindex="-1" class="flag ch"
+                                 data-i18n="settings#egress-region#select-ch">
+                                Switzerland
+                              </a>
+                            </li>
+                            <li data-region="CZ">
+                              <a href="#" tabindex="-1" class="flag cz"
+                                 data-i18n="settings#egress-region#select-cz">
+                                Czech Republic
                               </a>
                             </li>
                             <li data-region="DE">
@@ -18281,10 +18350,22 @@ window.HtmlCtrlInterface_UpdateDpiScaling = HtmlCtrlInterface_UpdateDpiScaling;
                                 Germany
                               </a>
                             </li>
+                            <li data-region="DK">
+                              <a href="#" tabindex="-1" class="flag dk"
+                                 data-i18n="settings#egress-region#select-dk">
+                                Denmark
+                              </a>
+                            </li>
                             <li data-region="ES">
                               <a href="#" tabindex="-1" class="flag es"
                                  data-i18n="settings#egress-region#select-es">
                                 Spain
+                              </a>
+                            </li>
+                            <li data-region="FR">
+                              <a href="#" tabindex="-1" class="flag fr"
+                                 data-i18n="settings#egress-region#select-fr">
+                                France
                               </a>
                             </li>
                             <li data-region="GB">
@@ -18293,10 +18374,28 @@ window.HtmlCtrlInterface_UpdateDpiScaling = HtmlCtrlInterface_UpdateDpiScaling;
                                 United Kingdom
                               </a>
                             </li>
+                            <li data-region="HK">
+                              <a href="#" tabindex="-1" class="flag hk"
+                                 data-i18n="settings#egress-region#select-hk">
+                                Hong Kong
+                              </a>
+                            </li>
+                            <li data-region="HU">
+                              <a href="#" tabindex="-1" class="flag hu"
+                                 data-i18n="settings#egress-region#select-hu">
+                                Hungary
+                              </a>
+                            </li>
                             <li data-region="IN">
                               <a href="#" tabindex="-1" class="flag in"
                                  data-i18n="settings#egress-region#select-in">
                                 India
+                              </a>
+                            </li>
+                            <li data-region="IT">
+                              <a href="#" tabindex="-1" class="flag it"
+                                 data-i18n="settings#egress-region#select-it">
+                                Italy
                               </a>
                             </li>
                             <li data-region="JP">
@@ -18309,6 +18408,24 @@ window.HtmlCtrlInterface_UpdateDpiScaling = HtmlCtrlInterface_UpdateDpiScaling;
                               <a href="#" tabindex="-1" class="flag nl"
                                  data-i18n="settings#egress-region#select-nl">
                                 Netherlands
+                              </a>
+                            </li>
+                            <li data-region="NO">
+                              <a href="#" tabindex="-1" class="flag no"
+                                 data-i18n="settings#egress-region#select-no">
+                                Norway
+                              </a>
+                            </li>
+                            <li data-region="RO">
+                              <a href="#" tabindex="-1" class="flag ro"
+                                 data-i18n="settings#egress-region#select-ro">
+                                Romania
+                              </a>
+                            </li>
+                            <li data-region="SE">
+                              <a href="#" tabindex="-1" class="flag se"
+                                 data-i18n="settings#egress-region#select-se">
+                                Sweden
                               </a>
                             </li>
                             <li data-region="SG">
