--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -537,10 +537,40 @@
                                   </strong>
                                 </a>
                             </li>
+                            <li data-region="AT">
+                              <a href="#" tabindex="-1" class="flag at"
+                                 data-i18n="settings#egress-region#select-at">
+                                Austria
+                              </a>
+                            </li>
+                            <li data-region="BE">
+                              <a href="#" tabindex="-1" class="flag be"
+                                 data-i18n="settings#egress-region#select-be">
+                                Belgium
+                              </a>
+                            </li>
+                            <li data-region="BG">
+                              <a href="#" tabindex="-1" class="flag bg"
+                                 data-i18n="settings#egress-region#select-bg">
+                                Bulgaria
+                              </a>
+                            </li>
                             <li data-region="CA">
                               <a href="#" tabindex="-1" class="flag ca"
                                  data-i18n="settings#egress-region#select-ca">
                                 Canada
+                              </a>
+                            </li>
+                            <li data-region="CH">
+                              <a href="#" tabindex="-1" class="flag ch"
+                                 data-i18n="settings#egress-region#select-ch">
+                                Switzerland
+                              </a>
+                            </li>
+                            <li data-region="CZ">
+                              <a href="#" tabindex="-1" class="flag cz"
+                                 data-i18n="settings#egress-region#select-cz">
+                                Czech Republic
                               </a>
                             </li>
                             <li data-region="DE">
@@ -549,10 +579,22 @@
                                 Germany
                               </a>
                             </li>
+                            <li data-region="DK">
+                              <a href="#" tabindex="-1" class="flag dk"
+                                 data-i18n="settings#egress-region#select-dk">
+                                Denmark
+                              </a>
+                            </li>
                             <li data-region="ES">
                               <a href="#" tabindex="-1" class="flag es"
                                  data-i18n="settings#egress-region#select-es">
                                 Spain
+                              </a>
+                            </li>
+                            <li data-region="FR">
+                              <a href="#" tabindex="-1" class="flag fr"
+                                 data-i18n="settings#egress-region#select-fr">
+                                France
                               </a>
                             </li>
                             <li data-region="GB">
@@ -561,10 +603,28 @@
                                 United Kingdom
                               </a>
                             </li>
+                            <li data-region="HK">
+                              <a href="#" tabindex="-1" class="flag hk"
+                                 data-i18n="settings#egress-region#select-hk">
+                                Hong Kong
+                              </a>
+                            </li>
+                            <li data-region="HU">
+                              <a href="#" tabindex="-1" class="flag hu"
+                                 data-i18n="settings#egress-region#select-hu">
+                                Hungary
+                              </a>
+                            </li>
                             <li data-region="IN">
                               <a href="#" tabindex="-1" class="flag in"
                                  data-i18n="settings#egress-region#select-in">
                                 India
+                              </a>
+                            </li>
+                            <li data-region="IT">
+                              <a href="#" tabindex="-1" class="flag it"
+                                 data-i18n="settings#egress-region#select-it">
+                                Italy
                               </a>
                             </li>
                             <li data-region="JP">
@@ -577,6 +637,24 @@
                               <a href="#" tabindex="-1" class="flag nl"
                                  data-i18n="settings#egress-region#select-nl">
                                 Netherlands
+                              </a>
+                            </li>
+                            <li data-region="NO">
+                              <a href="#" tabindex="-1" class="flag no"
+                                 data-i18n="settings#egress-region#select-no">
+                                Norway
+                              </a>
+                            </li>
+                            <li data-region="RO">
+                              <a href="#" tabindex="-1" class="flag ro"
+                                 data-i18n="settings#egress-region#select-ro">
+                                Romania
+                              </a>
+                            </li>
+                            <li data-region="SE">
+                              <a href="#" tabindex="-1" class="flag se"
+                                 data-i18n="settings#egress-region#select-se">
+                                Sweden
                               </a>
                             </li>
                             <li data-region="SG">
