Add fa_AF to RTL_LOCALES.

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -19339,7 +19339,7 @@ function DEBUG_LOG(msg) {
 
 /* LANGUAGE ******************************************************************/
 
-var RTL_LOCALES = ['devrtl', 'fa', 'ar'];
+var RTL_LOCALES = ['devrtl', 'fa', 'fa_AF', 'ar'];
 
 $(function() {
   var fallbackLanguage = 'en';
