Add new egress region.

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -645,6 +645,12 @@
                                 Norway
                               </a>
                             </li>
+                            <li data-region="PL">
+                              <a href="#" tabindex="-1" class="flag pl"
+                                 data-i18n="settings#egress-region#select-pl">
+                                Poland
+                              </a>
+                            </li>
                             <li data-region="RO">
                               <a href="#" tabindex="-1" class="flag ro"
                                  data-i18n="settings#egress-region#select-ro">
