--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -16577,7 +16577,7 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "settings#egress-region#select-jp": "ญี่ปุ่น",
       "settings#upstream-proxy#error-modal-body-configured": "You have configured Psiphon to use an “upstream proxy”.<br>\nHowever, we seem to be unable to connect to a Psiphon server through that proxy.<br>\nPlease fix the settings and try again.",
       "logs#show-debug-label": "Show debug logs",
-      "nav#logs": "Logs",
+      "nav#logs": "ปูม",
       "settings#upstream-proxy#set-domain-without-authentication-error-msg": "Setting a Domain requires setting a Username and Password",
       "settings#error-alert": "<strong>Error!</strong> Please fix incorrect values before proceeding.",
       "settings#local-proxy-ports#reason": "If you use tools on your computer that require manual configuration to work with Psiphon, you will want Psiphon to consistently use the same local port numbers. If you don’t have a reason to specify port numbers, you should allow Psiphon to choose them automatically to help avoid conflicts.",
