Add new server egress region.

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -669,6 +669,12 @@
                                 Singapore
                               </a>
                             </li>
+                            <li data-region="SK">
+                              <a href="#" tabindex="-1" class="flag sk"
+                                 data-i18n="settings#egress-region#select-sk">
+                                Slovakia
+                              </a>
+                            </li>
                             <li data-region="US">
                               <a href="#" tabindex="-1" class="flag us"
                                  data-i18n="settings#egress-region#select-us">
