--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -17404,7 +17404,7 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "settings#egress-region#select-gb": "Велика Британія",
       "settings#egress-region#select-jp": "Японія",
       "settings#egress-region#select-sg": "Сінгапур",
-      "settings#egress-region#select-sk": "Slovakia",
+      "settings#egress-region#select-sk": "Словаччина",
       "settings#egress-region#select-nl": "Нідерланди",
       "settings#egress-region#select-de": "Німеччина",
       "settings#egress-region#select-in": "Індія",
