Don't animate non-first startup balance change

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -186,7 +186,7 @@
 
         <li id="psicash-block" class="hidden">
           <div data-match-width=".main-nav a">
-            <div id="psicash-interface-zerobalance" class="psicash-interface">
+            <div id="psicash-interface-zerobalance" class="psicash-interface hidden">
               <div class="psicash-title-balance" data-i18n="[html]psicash#ui-zerobalance-title">Need a Speed&nbsp;Boost?</div>
               <div class="button-container">
                 <a class="psicash-buy-psi btn btn-primary" href="#">
@@ -195,7 +195,7 @@
               </div>
               <div><small><a href="#">?</a></small></div>
             </div>
-            <div id="psicash-interface-nsfbalance" class="psicash-interface">
+            <div id="psicash-interface-nsfbalance" class="psicash-interface hidden">
               <div class="psicash-title-balance">
                 PsiCash
                 <span class="psicash-balance-coin">
@@ -215,7 +215,7 @@
                 </a>
               </div>
             </div>
-            <div id="psicash-interface-enoughbalance" class="psicash-interface">
+            <div id="psicash-interface-enoughbalance" class="psicash-interface hidden">
                 <div class="psicash-title-balance">
                 PsiCash
                 <span class="psicash-balance-coin">
@@ -235,7 +235,7 @@
                 </a>
               </div>
             </div>
-            <div id="psicash-interface-buyingboost" class="psicash-interface">
+            <div id="psicash-interface-buyingboost" class="psicash-interface hidden">
               <div class="psicash-title-balance">
                 PsiCash
                 <span class="psicash-balance-coin">
@@ -255,7 +255,7 @@
                 </a>
               </div>
             </div>
-            <div id="psicash-interface-activeboost" class="psicash-interface">
+            <div id="psicash-interface-activeboost" class="psicash-interface hidden">
               <div class="psicash-title-balance">
                 PsiCash
                 <span class="psicash-balance-coin">
@@ -274,7 +274,7 @@
                 </a>
               </div>
             </div>
-            <div id="psicash-interface-vpndisabled" class="psicash-interface">
+            <div id="psicash-interface-vpndisabled" class="psicash-interface hidden">
               <div>
                 <span class="label label-warning">
                   <i class="icon-prohibited"></i>
