Improving PsiCash.Init failure handling

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -1397,6 +1397,15 @@
 
           <hr>
 
+          <form class="form-inline" id="debug-PsiCashInitDone">
+            <label>PsiCash Init()</label>
+            <label><input type="checkbox" id="debug-PsiCashInitDone-error">error</label>
+            <label><input type="checkbox" id="debug-PsiCashInitDone-recovered">recovered</label>
+            <a class="btn btn-primary"><i class="icon-arrow-right"></i></a>
+          </form>
+
+          <hr>
+
           <span class="help-block">
             The contents of this page are not shown to the user and so are not translated.
           </span>
