Change case for "Buy more PsiCash"

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -208,7 +208,7 @@
               </div>
               <div class="button-container">
                 <a class="psicash-buy-psi btn btn-small" data-i18n="psicash#ui-buymorepsi" href="#">
-                  Buy More PsiCash
+                  Buy more PsiCash
                 </a>
               </div>
             </div>
@@ -228,7 +228,7 @@
               </div>
               <div class="button-container">
                 <a class="psicash-buy-psi btn btn-small" data-i18n="psicash#ui-buymorepsi" href="#">
-                  Buy More PsiCash
+                  Buy more PsiCash
                 </a>
               </div>
             </div>
@@ -248,7 +248,7 @@
               </div>
               <div class="button-container">
                 <a class="psicash-buy-psi btn btn-small" data-i18n="psicash#ui-buymorepsi" href="#">
-                  Buy More PsiCash
+                  Buy more PsiCash
                 </a>
               </div>
             </div>
@@ -267,7 +267,7 @@
               </div>
               <div class="button-container">
                 <a class="psicash-buy-psi btn btn-small" data-i18n="psicash#ui-buymorepsi" href="#">
-                  Buy More PsiCash
+                  Buy more PsiCash
                 </a>
               </div>
             </div>
