--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -25485,9 +25485,9 @@ Datastore.prototype = {
       "appbackend#state-connected-reminder-body-2": "የስፖንሰሮቻችንን ገጾች በመጎብኘት ሳይፈንን ነጻ አድርገው ያቆዩት! ",
       "appbackend#minimized-to-systray-title": "ሳይፈን ወደ ማስታወቂያ ስፍራ አንሷል ",
       "appbackend#minimized-to-systray-body": "መተግበሪያውን ለመመለስ አዶው ላይ ጠቅ ያድርጉ ",
-      "psicash#transaction-error-title": "PsiCash transaction error",
-      "psicash#transaction-error-body": "Your PsiCash transaction attempt failed unexpectedly.",
-      "psicash#transaction-ExistingTransaction-title": "PsiCash purchase already exists",
+      "psicash#transaction-error-title": "PsiCash ግብይት ስህተት",
+      "psicash#transaction-error-body": "የእርስዎ PsiCash ግብይት ሙከራ ባልተጠበቀ ሁኔታ ሳይሳካ ቀርቷል።",
+      "psicash#transaction-ExistingTransaction-title": "PsiCash ግዢ ቀድሞውኑ አለ",
       "psicash#transaction-ExistingTransaction-body": "You have an existing PsiCash purchase of this type. Another purchase of this type is not allowed until the previous one expires. Your PsiCash state will be refreshed now.",
       "psicash#transaction-InsufficientBalance-title": "Insufficient PsiCash balance",
       "psicash#transaction-InsufficientBalance-body": "You do not have sufficient PsiCash balance for this purchase.",
@@ -25501,14 +25501,14 @@ Datastore.prototype = {
       "psicash#transaction-ServerError-body": "The PsiCash server responded with an error while trying to make the purchase. Retry your purchase later.",
       "psicash#ui-speedboost-active": "Speed&nbsp;Boost active for {TimeRemaining}",
       "psicash#ui-zerobalance-title": "Need a Speed&nbsp;Boost?",
-      "psicash#ui-buypsi": "Buy PsiCash",
-      "psicash#ui-buymorepsi": "Buy more PsiCash",
+      "psicash#ui-buypsi": "PsiCash ይግዙ",
+      "psicash#ui-buymorepsi": "ተጨማሪ PsiCash ይግዙ",
       "psicash#ui-nsfbalance-buttontext": "Needed for Speed&nbsp;Boost",
       "psicash#ui-enoughbalance-buttontext": "Start Speed&nbsp;Boost",
       "psicash#ui-buyingboost-buttontext": "Starting Speed&nbsp;Boost!",
-      "positive-value-indicator": "+{Number}",
-      "psicash#mustconnect-modal#title": "Psiphon Connection Required",
-      "psicash#mustconnect-modal#body": "In order to use PsiCash, you must be connected to the Psiphon network.",
+      "positive-value-indicator": "+[ቁጥር]",
+      "psicash#mustconnect-modal#title": "Psiphon (ሳይፈን) ግንኙነት ያስፈልጋል።",
+      "psicash#mustconnect-modal#body": "PsiCashን ለመጠቀም ከPsiphon (ሳይፈን) አውታረ መረብ ጋር መገናኘት ያስፈልጋል።",
       "psicash#init-error-title": "PsiCash initialization error",
       "psicash#init-error-body-unrecovered": "PsiCash failed to initialize. This is probably due a file system problem, such as being out of disk space. Your balance and other state is lost. PsiCash will not be usable. You can try restarting the application to recover from the problem.",
       "psicash#init-error-body-recovered": "PsiCash failed to initialize. This is probably due a file system problem, such as being out of disk space. Your balance and other state is reset.",
@@ -32541,7 +32541,7 @@ Datastore.prototype = {
       "psicash#transaction-error-body": "Your PsiCash transaction attempt failed unexpectedly.",
       "psicash#transaction-ExistingTransaction-title": "PsiCash purchase already exists",
       "psicash#transaction-ExistingTransaction-body": "You have an existing PsiCash purchase of this type. Another purchase of this type is not allowed until the previous one expires. Your PsiCash state will be refreshed now.",
-      "psicash#transaction-InsufficientBalance-title": "Insufficient PsiCash balance",
+      "psicash#transaction-InsufficientBalance-title": "PsiCash餘額不足",
       "psicash#transaction-InsufficientBalance-body": "You do not have sufficient PsiCash balance for this purchase.",
       "psicash#transaction-TransactionAmountMismatch-title": "PsiCash purchase price mismatch",
       "psicash#transaction-TransactionAmountMismatch-body": "PsiCash purchase prices are out-of-date. Your PsiCash state will be refreshed now.",
@@ -32549,7 +32549,7 @@ Datastore.prototype = {
       "psicash#transaction-TransactionTypeNotFound-body": "The product you are trying to buy no longer exists. You may need to update or reinstall the application.",
       "psicash#transaction-InvalidTokens-title": "Invalid PsiCash tokens",
       "psicash#transaction-InvalidTokens-body": "Your PsiCash tokens are invalid. Try restarting the application. If that doesn't work, you will need to <a href=\"https://psiphon3.com/faq.html#clear-windows-data\">clear your local storage</a>.",
-      "psicash#transaction-ServerError-title": "PsiCash server error",
+      "psicash#transaction-ServerError-title": "PsiCash 服務器錯誤",
       "psicash#transaction-ServerError-body": "The PsiCash server responded with an error while trying to make the purchase. Retry your purchase later.",
       "psicash#ui-speedboost-active": "Speed&nbsp;Boost active for {TimeRemaining}",
       "psicash#ui-zerobalance-title": "Need a Speed&nbsp;Boost?",
