Fix Dutch translation placeholder

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -29971,7 +29971,7 @@ Datastore.prototype = {
       "psicash#transaction-InvalidTokens-body": "Uw PsiCash-tokens zijn ongeldig. Probeer de toepassing opnieuw te starten. Als dat niet werkt, moet u uw <a href=\"https://psiphon3.com/faq.html#clear-windows-data\">lokale opslag wissen</a>.",
       "psicash#transaction-ServerError-title": "PsiCash-serverfout",
       "psicash#transaction-ServerError-body": "De PsiCash-server heeft met een fout gereageerd tijdens het proberen de aankoop te doen. Probeer uw aankoop later opnieuw.",
-      "psicash#ui-speedboost-active": "Snelheid&nbsp;Boost actief voor {Overgebleven tijd}",
+      "psicash#ui-speedboost-active": "Snelheid&nbsp;Boost actief voor {TimeRemaining}",
       "psicash#ui-zerobalance-title": "Snelheid nodig&nbsp;Boost?",
       "psicash#ui-buypsi": "Koop PsiCash",
       "psicash#ui-buymorepsi": "Koop meer PsiCash",
