Fix Psiphon-Inc/psiphon-issues#603: Escape logs

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -8429,9 +8429,9 @@ this._delay(function(){n===this.counter&&this.refreshPositions(!s)})},_clear:fun
             <!-- Log template -->
             <script type="text/html" id="log-template">
               <tr data-class="priority">
-                <td class="timestamp" data-content="timestamp">
+                <td class="timestamp" data-content-text="timestamp">
                 </td>
-                <td class="message" data-content="message">
+                <td class="message" data-content-text="message">
                 </td>
               </tr>
             </script>
@@ -8491,7 +8491,7 @@ this._delay(function(){n===this.counter&&this.refreshPositions(!s)})},_clear:fun
           <script type="text/html" id="locale-template">
             <div class="language-item">
               <a href="#" class="language-choice"
-                 data-value="localeCode" data-content="localeName"></a>
+                 data-value="localeCode" data-content-text="localeName"></a>
             </div>
           </script>
         </div><!-- /language-pane -->
