--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -1158,9 +1158,9 @@
             <!-- Log template -->
             <script type="text/html" id="log-template">
               <tr data-class="priority">
-                <td class="timestamp" data-content="timestamp">
+                <td class="timestamp" data-content-text="timestamp">
                 </td>
-                <td class="message" data-content="message">
+                <td class="message" data-content-text="message">
                 </td>
               </tr>
             </script>
@@ -1220,7 +1220,7 @@
           <script type="text/html" id="locale-template">
             <div class="language-item">
               <a href="#" class="language-choice"
-                 data-value="localeCode" data-content="localeName"></a>
+                 data-value="localeCode" data-content-text="localeName"></a>
             </div>
           </script>
         </div><!-- /language-pane -->
