Add new server egress region.

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -752,6 +752,12 @@
                                 Romania
                               </a>
                             </li>
+                            <li data-region="RS">
+                              <a href="#" tabindex="-1" class="flag rs"
+                                 data-i18n="settings#egress-region#select-rs">
+                                Serbia
+                              </a>
+                            </li>
                             <li data-region="SE">
                               <a href="#" tabindex="-1" class="flag se"
                                  data-i18n="settings#egress-region#select-se">
