Fix Psiphon-Inc/psiphon-issues#622: Blank warning may display when app starts with bad egress region selected

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -33155,9 +33155,12 @@ Datastore.prototype = {
     upstreamProxySetup();
     vpnModeSetup();
     updateAvailableEgressRegions(false); // don't force valid -- haven't filled in settings yet
-    // Fill in the settings.
 
-    refreshSettings();
+    $window.one(UI_READY_EVENT, function () {
+      // Fill in the settings. This must be done after the UI is ready, since it might
+      // show an error, requiring i18n to be initialized.
+      refreshSettings();
+    });
   }); //
   // Overall event handlers
   //
